--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>SkillBox Homework</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<title>SkillBox Homework</title>
 </head>
 <body>
-    <h1>"Привет, вёрстка!"</h1>
+<h1>"Привет, вёрстка!"</h1>
+
 </body>
 </html>
