--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<title>SkillBox Homework</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <title>SkillBox Homework</title>
 </head>
 <body>
-<h1>"Привет, вёрстка!"</h1>
+<div>
+  <a href="https://skillbox.ru/" target="_blank"><h1>"SkillBox"</h1></a>
+</div>
+<a href="downloads/2.7_Skillbox_Layout.docx" download="">"Скачать программу курса"</a>
+<a href="program.html">"Подробнее"</a>
+
 
 </body>
 </html>
